--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "state2app",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
@@ -59,11 +59,14 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "bunyan": "^1.8.5",
+    "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "config": "^1.24.0",
     "cookie-parser": "^1.4.3",
+    "draft-js": "^0.9.1",
     "express": "^4.14.0",
     "express-validation": "^1.0.1",
+    "firebase": "^3.6.4",
     "format-message": "^5.0.0",
     "helmet": "^3.1.0",
     "immutability-helper": "^2.0.0",
@@ -79,6 +82,7 @@
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "require-uncached": "^1.0.2",
+    "reselect": "^2.5.4",
     "serialize-javascript": "^1.3.0",
     "verror": "^1.9.0"
   },
