--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "config": "^1.24.0",
     "cookie-parser": "^1.4.3",
     "draft-js": "^0.9.1",
+    "draft-js-code": "^0.2.0",
     "express": "^4.14.0",
     "express-validation": "^1.0.1",
     "firebase": "^3.6.4",
@@ -72,6 +73,8 @@
     "immutability-helper": "^2.0.0",
     "joi": "^9.2.0",
     "keymirror": "^0.1.1",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.get": "^4.4.2",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.3.2",
@@ -79,7 +82,9 @@
     "react-router": "^4.0.0-alpha.6",
     "react-toolbox": "^1.3.3",
     "redux": "^3.6.0",
+    "redux-actions": "^1.2.0",
     "redux-logger": "^2.7.4",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
     "require-uncached": "^1.0.2",
     "reselect": "^2.5.4",
