--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "require-uncached": "^1.0.2",
     "reselect": "^2.5.4",
     "serialize-javascript": "^1.3.0",
+    "shift-parser": "^5.0.2",
     "verror": "^1.9.0"
   },
   "scripts": {
