--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "compression": "^1.6.2",
     "config": "^1.24.0",
     "cookie-parser": "^1.4.3",
-    "draft-js": "^0.9.1",
-    "draft-js-code": "^0.2.0",
+    "detect-indent": "^5.0.0",
+    "detect-newline": "^2.1.0",
+    "draft-js": "^0.10.0",
+    "ends-with": "^0.2.0",
     "express": "^4.14.0",
     "express-validation": "^1.0.1",
     "firebase": "^3.6.4",
@@ -89,7 +91,6 @@
     "require-uncached": "^1.0.2",
     "reselect": "^2.5.4",
     "serialize-javascript": "^1.3.0",
-    "shift-parser": "^5.0.2",
     "verror": "^1.9.0"
   },
   "scripts": {
